<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">A2CARES-App</string>
    <string name="main_header">Estudio A2CARES</string>
    <string name="desc_logo">Instituto de Ciencias Sostenibles</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Página principal</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_1">Agregar Participante</string>
    <string name="main_2">Buscar Participante</string>
    <string name="main_3">Buscar Casa</string>
    <string name="main_4">Recibir Casa</string>
    <string name="main_5">Descargar Datos</string>
    <string name="main_6">Subir Datos</string>
    <string name="main_7">Supervisor</string>
    <string name="main_8">Laboratorio</string>
    <string name="main_9">Candidatos</string>
    <string name="main_10">Médicos</string>
    <string name="main_11">Cambio de Domicilio</string>
    <string name="main_12">Control de Asistencia</string>
    <string name="main_13">Admisión Puestos</string>
    <string name="main_14">Temperatura Termo</string>
    <string name="datos_part">Datos participante</string>
    <string name="participants">Lista Participantes</string>
    <string name="phones">Teléfonos</string>
    <string name="send_house">Enviar casa</string>
    <string name="menu_house">Menu Casa</string>
    <string name="locate_house">Ubicar Casa</string>
    <string name="menu_doctor">Menu Médicos</string>
    <string name="lab_orders">Ordenes Laboratorio</string>
    <string name="marcar_asistencia">Control de Asistencia</string>
    <string name="admision">Admision A2CARES</string>
    <string name="informe_fin_dia_medicos">Informe Fin Dia Medicos</string>
    <string name="exit">Salir</string>
    <string name="success">Operación exitosa!</string>
    <string name="no_data_to_send">No hay información a enviar!</string>
    <string name="error">Ha ocurrido un error! <xliff:g id="desc_error">%1$s</xliff:g></string>
    <string name="storage_error">Medio de almacenamiento no disponible!</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="confirm">Confirmar</string>
    <string name="exiting">Realmente desea Salir?</string>
    <string name="errordb">Ha ocurrido un error, base de datos no existe!</string>
    <string name="wipe_db_confirm">Al marcar esta opción borrará la base de datos del equipo, los datos almacenados se borrarán si continúa. Aún desea marcar esta opción?</string>
    <string name="error_wipe_db_super">No tiene el rol necesario para limpiar base de datos</string>
    <string name="change_date">Seleccionar fecha</string>
    <string name="desc_barcode">Escanear código de barras</string>
    <string name="perm_error">No tiene permiso en esta opción!</string>
    <string name="data_not_sent">Hay datos sin enviar en el equipo, estos datos se borrarán si continúa. Aún desea descargar la información del servidor?</string>
    <string name="downloading">Descargar toda la info del servidor? Esta operacion descarta toda la informacion actual en el dispositivo</string>
    <string name="uploading">Enviar toda la info al servidor?</string>
    <string name="enter">Ingresar</string>
    <string name="barcode_error">Escaner de código de barras no disponible</string>
    <string name="search_hint">Ingresar texto de búsqueda</string>
    <string name="select">Seleccionar</string>
    <string name="no_items">No hay registros!</string>
    <string name="casa_search">Buscar Casa</string>
    <string name="parametro">Parámetro de búsqueda</string>
    <string name="method">Método:</string>
    <string name="ok">Aceptar</string>
    <string name="enter_code">Ingresar código</string>
    <string name="enter_name">Ingresar nombre</string>
    <string name="enter_lastname">Ingresar apellido</string>
    <string name="selec_part">Seleccionar participante</string>
    <string name="code_notfound">Identificador no encontrado!</string>
    <string name="text_notfound">Valor no encontrado!</string>
    <string name="scan_error">Esta lectura es inválida!</string>
    <string name="alerta_conva">Pendiente Convaleciente, consulte con su Supervisor</string>
    <string name="alerta_seguimiento">Paciente en Seguimiento </string>
    <string name="alerta_pendiente_muestra_anual">YA TIENE MUESTRA ANUAL</string>
    <string name="alerta_no_pendiente_muestra_anual">NO TIENE MUESTRA ANUAL</string>
    <string name="alerta_retirado">Participante Retirado</string>
    <string name="enter_guardado">Asistencia guardada con éxito</string>
    <string name="error_necesita_descargar">La base de datos no contiene registros. DESCARGAR DATOS.</string>
    <string name="procesando_espere">Procesando ubicación actual - De Guardar nuevamente</string>
    <string name="next">Siguiente</string>
    <string name="prev">Previo</string>
    <string name="finish">Finalizar</string>
    <string name="review">Revisar</string>
    <string name="submit_confirm_message">Guardar la informacion en la base de datos?</string>
    <string name="submit_confirm_button">Guardar</string>
    <string name="submit_confirm_button_asist">Guardar Asistencia</string>
    <string name="submit_confirm_button_asist_temp">Guardar Temperatura</string>
    <string name="submit_confirm_button_asist_temp1">Temperatura Guardada con éxito.</string>
    <string name="submit_valor_temperatura">El valor de Temperatura debe estar en el rango (2 a 10)</string>
    <string name="submit_valor_temperaturaVacio">El valor de Temperatura no debe estar vacío</string>
    <string name="cancel">Cancelar</string>
    <string name="is_null">(Nulo)</string>
    <string name="loading">Cargando.....</string>
    <string name="new_consultation">Hoja Clínica</string>
    <string name="new_visit">Visita</string>
    <string name="new_survey_1">Encuesta Casa</string>
    <string name="new_survey_2">Encuesta Participante</string>
    <string name="new_survey_3">Peso y Talla</string>
    <string name="samples">Muestras</string>
    <string name="go_home">Ir Casa</string>
    <string name="sick_samples">Muestras Enfermo</string>
    <string name="satisfaction_survey">Encuensta de Satisfacción Usuario</string>
    <string name="reconsent">Reconsentimiento</string>
    <string name="pendiente_reconsent">PENDIENTE RECONSENTIMIENTO</string>
    <string name="code">Código</string>
    <string name="casa">Casa</string>
    <string name="participant">Participante</string>
    <string name="usuarioa2cares">Usuario:</string>
    <string name="usuarioBioanalista">Bioanalista/Flebotomista:</string>
    <string name="ubicaciona2cares">Ubicación Actual:</string>
    <string name="edad">Edad</string>
    <string name="notavailable">No disponible</string>
    <string name="pending">Pendiente</string>
    <string name="done">Realizado</string>
    <string name="home">Inicio</string>
    <string name="back">Regresar</string>
    <string name="download">Descargar Datos</string>
    <string name="upload">Subir Datos</string>
    <string name="err_cancel">Ha cancelado el proceso!</string>
    <string name="outofrange">Fuera de rango</string>
    <string name="intro_message">
        <![CDATA[
            Para enviar información tiene que estar pareado con el otro dispositivo:
              (1) Buscar en los dispositivos pareados
              (2) Conectar al dispositivo remoto
              (3) Enviar los datos
        ]]>
    </string>
    <string name="send">Enviar</string>
    <string name="not_connected">No está conectado!</string>
    <string name="bt_not_enabled_leaving">Bluetooth deshabilitado. Saliendo de la actividad.</string>
    <string name="title_connecting">conectando..</string>
    <string name="title_connected_to">Conectado a <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="connected_to">Conectado a </string>
    <string name="send_to">Enviar a ..</string>
    <string name="title_not_connected">No conectado</string>
    <string name="waiting_data">Esperando datos..</string>
    <string name="send_request">Enviar solicitud</string>
    <string name="start_part">/*Enviar participante*/</string>
    <string name="finished_part">/*Terminado participantes*/</string>
    <string name="start_partproc">/*Enviar participante procesos*/</string>
    <string name="finished_partproc">/*Terminado procesos*/</string>
    <string name="start_phone">/*Enviar telefono*/</string>
    <string name="finished">/*Proceso finalizado*/</string>
    <string name="scanning">Buscando dispositivos..</string>
    <string name="select_device">Seleccionar dispositivo para conectar</string>
    <string name="none_paired">Ho hay equipos pareados</string>
    <string name="none_found">No se encuentran dispositivos</string>
    <string name="title_paired_devices">Equipos pareados</string>
    <string name="title_other_devices">Otros disponibles</string>
    <string name="button_scan">Buscar equipos</string>
    <string name="secure_connect">Conectar</string>
    <string name="insecure_connect">Conectar (inseguro)..</string>
    <string name="discoverable">Hacer visible</string>
    <string name="sample_show_log">Ver actividad</string>
    <string name="sample_hide_log">Esconder actividad</string>
    <string name="fechaVisita">Fecha visita</string>
    <string name="fechaVisitaHint"></string>
    <string name="visitaExitosa">¿Visita exitosa?</string>
    <string name="visitaExitosaHint"></string>
    <string name="razonVisitaNoExitosa">Razon visita no exitosa</string>
    <string name="razonVisitaNoExitosaHint">Seleccione porque razón no logró realizar una visita exitosa</string>
    <string name="otraRazonVisitaNoExitosa">Otra razón visita no exitosa</string>
    <string name="otraRazonVisitaNoExitosaHint">Indicar porque otra razón no logró realizar una visita exitosa</string>
    <string name="visitaNoExitosa">Visita registrada. Se guardó en la base de datos una visita fallida por <xliff:g id="razon">%1$s</xliff:g></string>
    <string name="direccion_cambio_domicilio">Dirección de nuevo domicilio.</string>
    <string name="telefono_cambio_domicilio">Teléfono de nuevo domicilio.</string>
    <string name="telefono_1_actualizado">Actualizar Teléfono 1.</string>
    <string name="telefono_2_actualizado">Actualizar Teléfono 2.</string>
    <string name="marker_detail_latlng">(%1$.6f, %2$.6f)</string>
    <string name="marker_latlng_format">%1$.6f</string>
    <string name="latlng">Lat/Long</string>
    <string name="latlngHelp">*Presionar el punto unos 3 seg, luego arrastrar*</string>
    <string name="error_marker">Error al obtener coordenada!!</string>
    <string name="without_direction">Sin dirección</string>
    <string name="wrongSelect">La respuesta para <xliff:g id="variable">%1$s</xliff:g> es requerida</string>
    <string name="super_1">Recepción BHC Supervisor</string>
    <string name="super_2">Recepción Rojo Supervisor</string>
    <string name="recepcionesHoy">Muestras recepcionas hoy</string>
    <string name="observacionR">Observaciones</string>
    <string name="fechaRecepcion">Fecha de recepción</string>
    <string name="lab_1">Recepción Rojo Laboratorio</string>
    <string name="header_pending_data">Por favor ingrese porque razón no ingreso la información debida.</string>
    <string name="orazon_pending_data">Otra razón..</string>
    <string name="reason_discard">Por favor ingrese porque razón se descarta el punto <xliff:g id="variable">%1$s</xliff:g></string>
    <string name="observacion">Observación</string>
    <string name="fis">FIS</string>
    <string name="fif">FIF</string>
    <string name="tipoConsulta">Consulta</string>
    <string name="categoria">Categoría</string>
    <string name="tipoMuestra">Tipo Muestra</string>
    <string name="sick_recep_title">Recepción muestra de enfermo</string>
</resources>