<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.BuscarParticipanteActivity">
    <TextView
        android:id="@+id/label_logo"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_search_part"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/selec_part"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/metodo_busqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:singleLine="true"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/barcode_button"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_barcode"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:src="@mipmap/ic_barcode" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/codigo"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:hint="@string/code"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/enter_code" />

        <ImageButton
            android:id="@+id/find_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/enter_code"
            android:src="@mipmap/ic_search" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:context=".ui.activities.BuscarParticipanteActivity"></android.support.v7.widget.RecyclerView>
</LinearLayout>
