<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="2dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="8dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_logo"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_gps" />

            <TextView
                android:id="@+id/label_razon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:focusable="false"
                android:gravity="center"
                android:padding="6dip"
                android:text="@string/reason_discard"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
        <Spinner
            android:id="@+id/razon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_orazon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/orazon_pending_data"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/orazon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orazon_pending_data"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />
        <Space
            android:layout_width="fill_parent"
            android:layout_height="@dimen/padding_xlarge"/>
        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_menu_save"
            android:paddingTop="6dip"
            android:text="@string/submit_confirm_button"
            android:background="@color/blue_primary"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>