<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="2dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="8dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_logo"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_rojo" />

            <TextView
                android:id="@+id/label_header"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:ellipsize="end"
                android:focusable="false"
                android:gravity="left"
                android:padding="6dip"
                android:text="@string/lab_1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Spinner
                android:id="@+id/metodo_busqueda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                android:singleLine="true"
                android:textSize="12sp"
                android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="2dip"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="8dip" >

            <EditText
                android:id="@+id/codigo"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ellipsize="end"
                android:focusable="true"
                android:hint="@string/desc_barcode"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/barcode_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/desc_barcode"
                android:src="@mipmap/ic_barcode" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_volumen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/volumen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/volumen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/volumen"
            android:inputType="numberDecimal"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_obs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/observacionR"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/obs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/observacionR"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="@dimen/padding_xlarge"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="0dip"
            android:paddingLeft="0dip"
            android:paddingRight="0dip"
            android:paddingTop="0dip" style="@android:style/ButtonBar">

            <Button
                android:id="@+id/save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/blue_primary"
                android:drawableStart="@mipmap/ic_menu_save"
                android:text="@string/submit_confirm_button"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/finish"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/solid_red"
                android:drawableStart="@mipmap/ic_menu_close_clear_cancel"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>